--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <script>hljs.initHighlightingOnLoad();</script>
 </head>
 <body class='light'>
-  <div><p>First things first...</p>
+  <div><h3 id="quick-and-dirty-presentations-with-big">Quick and Dirty Presentations with <a href="https://github.com/tmcw/big">Big</a></h3>
+</div>
+<div><p>First things first...</p>
 <p><span class='nobreak'><code>$ npm install -g big-presentation</code></span></p>
 </div>
 <div><p>To initialize a new presentation, run...</p>
@@ -37,7 +39,7 @@
 </div>
 <div><p>You can even host your presentation for free in a matter of seconds using <a href="https://pages.github.com/">Github Pages</a>!</p>
 </div>
-<div><p>For more tips and tricks checkout the <span class='nobreak'><a href="https://github.com/tmcw/big"><code>big-presentation</code></a></span> documentation on Github.</p>
+<div><p>For more tips and tricks checkout the <a href="https://github.com/tmcw/big">documentation</a> on Github.</p>
 <p><small class='nobreak'>And a big thanks to <a href="https://github.com/tmcw">Tom MacWright</a> for creating this project!</small></p>
 </div>
 </body>
