--- a/index.html
+++ b/index.html
@@ -42,5 +42,9 @@
 <div><p>For more tips and tricks checkout the <a href="https://github.com/tmcw/big">documentation</a> on Github.</p>
 <p><small class='nobreak'>And a big thanks to <a href="https://github.com/tmcw">Tom MacWright</a> for creating this project!</small></p>
 </div>
+<div><p>The source for this presentation can be found at <a href="https://github.com/johncmunson/big-presentation-demo">johncmunson/big-presentation-demo</a></p>
+</div>
+<div><div class='blink'>[fin]</div>
+</div>
 </body>
 </html>
